# faithchat

./: .gitignore  render.yaml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
backend/routes/: auth.py  chat.py  donations.py  stripe_webhook.py
backend/services/: openai_service.py
frontend/: next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  home.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/donate/: create-intent.ts
frontend/src/app/api/forgot/: route.ts
frontend/src/app/api/login/: route.ts
frontend/src/app/api/logout/: route.ts
frontend/src/app/api/register/: route.ts
frontend/src/app/api/reset-password/: route.ts
frontend/src/app/api/session/: route.ts
frontend/src/app/auth/: page.tsx
frontend/src/app/chat/: chat.css  page.tsx
frontend/src/app/donate/: donate.css  layout.tsx  page.tsx
frontend/src/app/forgot/: page.tsx
frontend/src/app/login/: LoginView.tsx  login.css  page.tsx
frontend/src/app/payment/: page.tsx  payment.css
frontend/src/app/register/: RegisterView.tsx  page.tsx  register.css
frontend/src/app/reset/: page.tsx
frontend/src/components/: AppFrame.tsx  AuthContext.tsx  Button.tsx  ChatBubble.tsx  Coverflow.tsx  Footer.tsx  NavBar.tsx  navbar.css
frontend/src/lib/: api.ts  supabaseClient.ts  supabaseServer.ts
